feat: implement basic followers endpoint
