# apps/api/internal/handler/user.go
@@ -1,10 +1,14 @@
 package handler
 
 import (
+	"errors"
 	"log/slog"
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
+	"gorm.io/gorm"
 
 	"github.com/abgeo/follytics/internal/domain/constant"
 	"github.com/abgeo/follytics/internal/domain/dto/response"
@@ -14,6 +18,7 @@ import (
 type UserHandler interface {
 	Me(ctx *gin.Context)
 	TrackLogin(ctx *gin.Context)
+	Followers(ctx *gin.Context)
 }
 
 type User struct {
@@ -45,14 +50,17 @@ func NewUser(
 
 // Me handler.
 //
-//	@Summary		Get current account
-//	@Description	Get current authenticated account
+//	@Summary		Retrieve the current authenticated user
+//	@Description	Returns details of the currently authenticated account
 //	@ID				getCurrentUser
 //	@Tags			User
+//
 //	@Security		ApiKeyAuth
-//	@Success		200	{object}	response.HTTPResponse[response.User]
-//	@Failure		401	{object}	response.HTTPError
-//	@Failure		500	{object}	response.HTTPError
+//
+//	@Success		200	{object}	response.HTTPResponse[response.User]	"Successfully retrieved the authenticated user"
+//	@Failure		401	{object}	response.HTTPError						"Unauthorized: authentication required"
+//	@Failure		500	{object}	response.HTTPError						"Internal server error"
+//
 //	@Router			/users/me [get]
 func (h *User) Me(ctx *gin.Context) {
 	var resp response.HTTPResponse[response.User]
@@ -76,14 +84,16 @@ func (h *User) Me(ctx *gin.Context) {
 // TrackLogin handler.
 //
 //	@Summary		Track user login
-//	@Description	Update the user or create new one if it does not exist
+//	@Description	Creates a new user if they do not exist or updates an existing user upon login
 //	@ID				trackLogin
 //	@Tags			User
+//
 //	@Security		ApiKeyAuth
-//	@Success		200	{object}	response.HTTPResponse[response.User]
-//	@Failure		400	{object}	response.HTTPError
-//	@Failure		401	{object}	response.HTTPError
-//	@Failure		500	{object}	response.HTTPError
+//
+//	@Success		200	{object}	response.HTTPResponse[response.User]	"Successfully created or updated user"
+//	@Failure		401	{object}	response.HTTPError						"Unauthorized: authentication required"
+//	@Failure		500	{object}	response.HTTPError						"Internal server error"
+//
 //	@Router			/users/login-events [post]
 func (h *User) TrackLogin(ctx *gin.Context) {
 	var resp response.HTTPResponse[response.User]
@@ -91,6 +101,70 @@ func (h *User) TrackLogin(ctx *gin.Context) {
 	user, err := h.userSvc.Sync(ctx)
 	if err != nil {
 		h.httpSvc.HTTPError(ctx, http.StatusInternalServerError, constant.HTTPErrorCodeUnknown, err.Error())
+
+		return
+	}
+
+	if err = resp.Populate(user); err != nil {
+		h.httpSvc.HTTPError(ctx, http.StatusInternalServerError, constant.HTTPErrorCodeUnknown, err.Error())
+
+		return
+	}
+
+	h.httpSvc.HTTPResponse(ctx, http.StatusOK, resp)
+}
+
+// Followers handler.
+//
+//	@Summary		Retrieve followers for a user
+//	@Description	Returns a paginated list of followers for the specified user ID
+//	@ID				getUserFollowers
+//	@Tags			User
+//
+//	@Security		ApiKeyAuth
+//
+//	@Param			page	query		string									false	"Page number for pagination (default: 1)"	Format(int)
+//	@Param			limit	query		string									false	"Number of results per page (default: 10)"	Format(int)
+//	@Param			id		path		string									true	"User ID to retrieve followers for"			Format(uuid)
+//
+//	@Success		200		{object}	response.HTTPResponse[[]response.User]	"Successfully retrieved list of followers"
+//	@Failure		400		{object}	response.HTTPError						"Invalid request parameters"
+//	@Failure		401		{object}	response.HTTPError						"Unauthorized: authentication required"
+//	@Failure		404		{object}	response.HTTPError						"User not found"
+//	@Failure		500		{object}	response.HTTPError						"Internal server error"
+//
+//	@Router			/users/{id}/followers [get]
+func (h *User) Followers(ctx *gin.Context) {
+	var resp response.HTTPResponse[[]response.User]
+
+	id, err := uuid.Parse(ctx.Param("id"))
+	if err != nil {
+		h.httpSvc.HTTPValidationError(ctx, err)
+
+		return
+	}
+
+	page, err := strconv.Atoi(ctx.Query("page"))
+	if err != nil || page < 1 {
+		page = 1
+	}
+
+	limit, err := strconv.Atoi(ctx.Query("limit"))
+	if err != nil || limit < 1 {
+		limit = 10
+	}
+
+	user, err := h.userSvc.GetFollowers(ctx, id, (page-1)*limit, limit)
+	if err != nil {
+		statusCode := http.StatusInternalServerError
+		errorCode := constant.HTTPErrorCodeUnknown
+
+		if errors.Is(err, gorm.ErrRecordNotFound) {
+			statusCode = http.StatusNotFound
+			errorCode = constant.HTTPErrorCodeNotFound
+		}
+
+		h.httpSvc.HTTPError(ctx, statusCode, errorCode, err.Error())
 
 		return
 	}
