# apps/api/internal/route/user.go
@@ -41,5 +41,6 @@ func (route *User) Register(router gin.IRouter) {
 	{
 		group.GET("me", route.handler.Me)
 		group.POST("login-events", route.handler.TrackLogin)
+		group.GET(":id/followers", route.handler.Followers)
 	}
 }
